# api-web

./: .env  .gitignore  ARCHITECTURE_REFACTOR_FINAL.md  BASE_MODEL_REFACTOR.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_STYLE_CHECK_REPORT.md  DATABASE_FIX_GUIDE.md  FINAL_REFACTOR_SUMMARY.md  MODEL_SERVICE_REFACTOR.md  OBJECT_MAPPING_OPTIMIZATION.md  OBJECT_MAPPING_OPTIMIZATION_FINAL.md  README.md  REFACTOR_COMPLETE.md  REPOSITORY_ARCHITECTURE.md  REPOSITORY_LAYER_SPEC_SUMMARY.md  REPOSITORY_REFACTOR_COMPLETE.md  REPOSITORY_REFACTOR_SUMMARY.md  TEST_RESULTS.md  TEST_SUMMARY.md  VIDEO_GENERATION_SUMMARY.md  pyproject.toml  run_auto_variant_example.py  run_export_test.py  run_export_variants.py  run_video_examples.py  run_video_test.py  run_video_test_full.py  test_all_routers.py  test_routers.sh  地理视频生成系统_实施总结.md  需求文档.md
.claude/: settings.local.json
.trae/documents/: 基于模板方法模式的下载策略重构.md
app/: main.py  run.py
app/core/: config.py  events.py  exceptions.py  json_encoder.py  logging.py  middleware.py
app/db/: config.py
app/enums/: __init__.py  activation_code_enum.py  activation_code_status_enum.py  base.py  task_status_enum.py  task_type_enum.py
app/models/: __init__.py  activation_code.py  base.py  monitor_config.py  task.py  user.py
app/repositories/: __init__.py  base.py
app/routers/: __init__.py  activation_code_router.py  auth_router.py  bit_browser_router.py  browser_router.py  common_router.py  health.py  (+3 more)
docs/: AI流水线架构设计.md  剪映操作库源码分析.md  自动化平台架构设计.md
examples/: audio_split_example.py  geo_video_example.py  video_generation_example.py
(+152 files in other folders)
